@@ -20,90 +20,91 @@ struct ParkLoadResult;
 
 enum class GameCommand : int32_t
 {
-    SetRideAppearance,        // GA
-    SetLandHeight,            // GA
-    TogglePause,              // GA
-    PlaceTrack,               // GA
-    RemoveTrack,              // GA
-    LoadOrQuit,               // GA
-    CreateRide,               // GA
-    DemolishRide,             // GA
-    SetRideStatus,            // GA
-    SetRideVehicles,          // GA
-    SetRideName,              // GA
-    SetRideSetting,           // GA
-    PlaceRideEntranceOrExit,  // GA
-    RemoveRideEntranceOrExit, // GA
-    RemoveScenery,            // GA
-    PlaceScenery,             // GA
-    SetWaterHeight,           // GA
-    PlacePath,                // GA
-    PlacePathLayout,          // GA
-    RemovePath,               // GA
-    ChangeSurfaceStyle,       // GA
-    SetRidePrice,             // GA
-    SetGuestName,             // GA
-    SetStaffName,             // GA
-    RaiseLand,                // GA
-    LowerLand,                // GA
-    EditLandSmooth,           // GA
-    RaiseWater,               // GA
-    LowerWater,               // GA
-    SetBrakesSpeed,           // GA
-    HireNewStaffMember,       // GA
-    SetStaffPatrol,           // GA
-    FireStaffMember,          // GA
-    SetStaffOrders,           // GA
-    SetParkName,              // GA
-    SetParkOpen,              // GA
-    BuyLandRights,            // GA
-    PlaceParkEntrance,        // GA
-    RemoveParkEntrance,       // GA
-    SetMazeTrack,             // GA
-    SetParkEntranceFee,       // GA
-    SetStaffColour,           // GA
-    PlaceWall,                // GA
-    RemoveWall,               // GA
-    PlaceLargeScenery,        // GA
-    RemoveLargeScenery,       // GA
-    SetCurrentLoan,           // GA
-    SetResearchFunding,       // GA
-    PlaceTrackDesign,         // GA
-    StartMarketingCampaign,   // GA
-    PlaceMazeDesign,          // GA
-    PlaceBanner,              // GA
-    RemoveBanner,             // GA
-    SetSceneryColour,         // GA
-    SetWallColour,            // GA
-    SetLargeSceneryColour,    // GA
-    SetBannerColour,          // GA
-    SetLandOwnership,         // GA
-    ClearScenery,             // GA
-    SetBannerName,            // GA
-    SetSignName,              // GA
-    SetBannerStyle,           // GA
-    SetSignStyle,             // GA
-    SetPlayerGroup,           // GA
-    ModifyGroups,             // GA
-    KickPlayer,               // GA
-    Cheat,                    // GA
-    PickupGuest,              // GA
-    PickupStaff,              // GA
-    BalloonPress,             // GA
-    ModifyTile,               // GA
-    EditScenarioOptions,      // GA
-    PlacePeepSpawn,           // GA
-    SetClimate,               // GA
-    SetColourScheme,          // GA
-    SetStaffCostume,          // GA
-    PlaceFootpathAddition,    // GA
-    RemoveFootpathAddition,   // GA
-    GuestSetFlags,            // GA
-    SetDate,                  // GA
-    Custom,                   // GA
+    SetRideAppearance,
+    SetLandHeight,
+    TogglePause,
+    PlaceTrack,
+    RemoveTrack,
+    LoadOrQuit,
+    CreateRide,
+    DemolishRide,
+    SetRideStatus,
+    SetRideVehicles,
+    SetRideName,
+    SetRideSetting,
+    PlaceRideEntranceOrExit,
+    RemoveRideEntranceOrExit,
+    RemoveScenery,
+    PlaceScenery,
+    SetWaterHeight,
+    PlacePath,
+    PlacePathLayout,
+    RemovePath,
+    ChangeSurfaceStyle,
+    SetRidePrice,
+    SetGuestName,
+    SetStaffName,
+    RaiseLand,
+    LowerLand,
+    EditLandSmooth,
+    RaiseWater,
+    LowerWater,
+    SetBrakesSpeed,
+    HireNewStaffMember,
+    SetStaffPatrol,
+    FireStaffMember,
+    SetStaffOrders,
+    SetParkName,
+    SetParkOpen,
+    BuyLandRights,
+    PlaceParkEntrance,
+    RemoveParkEntrance,
+    SetMazeTrack,
+    SetParkEntranceFee,
+    SetStaffColour,
+    PlaceWall,
+    RemoveWall,
+    PlaceLargeScenery,
+    RemoveLargeScenery,
+    SetCurrentLoan,
+    SetResearchFunding,
+    PlaceTrackDesign,
+    StartMarketingCampaign,
+    PlaceMazeDesign,
+    PlaceBanner,
+    RemoveBanner,
+    SetSceneryColour,
+    SetWallColour,
+    SetLargeSceneryColour,
+    SetBannerColour,
+    SetLandOwnership,
+    ClearScenery,
+    SetBannerName,
+    SetSignName,
+    SetBannerStyle,
+    SetSignStyle,
+    SetPlayerGroup,
+    ModifyGroups,
+    KickPlayer,
+    Cheat,
+    PickupGuest,
+    PickupStaff,
+    BalloonPress,
+    ModifyTile,
+    EditScenarioOptions,
+    PlacePeepSpawn,
+    SetClimate,
+    SetColourScheme,
+    SetStaffCostume,
+    PlaceFootpathAddition,
+    RemoveFootpathAddition,
+    GuestSetFlags,
+    SetDate,
+    Custom,
     ChangeMapSize,
     FreezeRideRating,
     SetGameSpeed,
+    SetRestrictedScenery,
     Count,
 };
 
